Using platform thread instead of virtual thread