@@ -50,7 +50,7 @@ public class InfoWidget extends Stage {
         super.getIcons().add(Icon.graphic("info_widget_icon_64.png", 64).getImage());
 
         // position to the top-right corner of the primary screen
-        Thread.startVirtualThread(() -> {
+        new Thread(() -> {
             // wait for some time for the widget to show, so that its dimensions are populated
             do {
                 Planner.sleepFor(Duration.ofMillis(100));
@@ -64,7 +64,7 @@ public class InfoWidget extends Stage {
                     screenBounds.getMaxX() - widgetWidth - horizontalPadding,
                     screenBounds.getMinY() + verticalPadding
             );
-        });
+        }).start();
         updateInProcessTasksThread();
     }
 
